--- a/app/src/main/res/layout/activity_detailed.xml
+++ b/app/src/main/res/layout/activity_detailed.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.bugscript.postergrid.DetailedActivity">
+    tools:context="com.example.android.movie_stage2.DetailedActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
