--- a/app/src/main/res/layout/content_detailed.xml
+++ b/app/src/main/res/layout/content_detailed.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.bugscript.postergrid.DetailedActivity"
+    tools:context="com.example.android.movie_stage2.DetailedActivity"
     tools:showIn="@layout/activity_detailed"
     android:id="@+id/nested">
 
